feat(electron): fix asset paths in prod build

--- a/web/angular-wallet/src/index.html
+++ b/web/angular-wallet/src/index.html
@@ -4,13 +4,13 @@
     <head>
 
         <title>BURST</title>
-        <base href="/">
+        <base href="./">
 
         <meta charset="utf-8">
-        <meta name="description" content="Material design admin template with pre-built apps and pages">
+        <meta name="description" content="Phoenix: Official BURST Wallet">
         <meta name="keywords"
-              content="HTML,CSS,AngularJS,Angular,Angular 2,Angular 4,Angular 5,Angular 6,Angular 7,Material,Material 2">
-        <meta name="author" content="Withinpixels">
+              content="BURST, burstcoin, crypto, brs, angular, electron, typescript">
+        <meta name="author" content="Burst Apps Team">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
         <link rel="icon" type="image/x-icon" href="favicon.ico">
