--- a/web/angular-wallet/src/index.html
+++ b/web/angular-wallet/src/index.html
@@ -4,7 +4,7 @@
     <head>
 
         <title>BURST</title>
-        <base href="./">
+        <base href="/">
 
         <meta charset="utf-8">
         <meta name="description" content="Phoenix: Official BURST Wallet">
