feat: refactoring account info

--- a/web/angular-wallet/src/index.html
+++ b/web/angular-wallet/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
 
-  <title>BURST</title>
+  <title>Phoenix Wallet</title>
   <base href="/">
 
   <meta charset="utf-8">
@@ -14,7 +14,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="assets/icons/meteocons/style.css" rel="stylesheet">
   <link href="assets/icons/material-icons/outline/style.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Muli:300,400,600,700" rel="stylesheet">
 
