--- a/web/angular-wallet/src/index.html
+++ b/web/angular-wallet/src/index.html
@@ -7,15 +7,15 @@
   <base href="/">
 
   <meta charset="utf-8">
-  <meta name="description" content="Phoenix: Official BURST Wallet">
+  <meta name="description" content="Phoenix: Official Signum Wallet">
   <meta name="keywords"
         content="BURST, burstcoin, crypto, brs, angular, electron, typescript">
-  <meta name="author" content="Burst Apps Team">
+  <meta name="author" content="Signum Network">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="assets/icons/material-icons/outline/style.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Muli:300,400,600,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600,700" rel="stylesheet">
 
   <link rel="apple-touch-icon" sizes="57x57" href="assets/images/logos/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="assets/images/logos/apple-icon-60x60.png">
