feat: added whitespace visualizer

--- a/web/angular-wallet/src/index.html
+++ b/web/angular-wallet/src/index.html
@@ -75,7 +75,7 @@
       right: calc(var(--logo-size) / -2);
       bottom: calc(var(--logo-size) / -2);
       opacity: 0.05 !important;
-      animation: appear 4s ease-in-out;
+      animation: appear 4s ease-in-out forwards;
     }
 
     @keyframes appear {
