Feat/improved passphrase generation (#1555)
* wip: added salt step and translations

* wip: passphrase onboarding with salt now

* fix: visibilty

* feat: revamped account creation flow with custom salt

* fix: creation flow flags

* chore: refactored seeding process

* chore: refactored seeding process

* chore: nicer bg gfx

* feat: added whitespace visualizer

* chore: better readability of accoutn data

--- a/web/angular-wallet/src/index.html
+++ b/web/angular-wallet/src/index.html
@@ -9,7 +9,7 @@
   <meta charset="utf-8">
   <meta name="description" content="Phoenix: Official Signum Wallet">
   <meta name="keywords"
-        content="BURST, burstcoin, crypto, brs, angular, electron, typescript">
+        content="signum, SIGNA, crypto, angular, electron, typescript, blockchain, sustainable">
   <meta name="author" content="Signum Network">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
@@ -44,8 +44,7 @@
       left: 0;
       right: 0;
       bottom: 0;
-      background-color: #00579D;
-      background-image: url('assets/images/bg/hexagon.svg');
+      background-color: #003d6e;
       z-index: 99999;
       pointer-events: none;
     }
@@ -55,58 +54,40 @@
       width: 100%;
       position: absolute;
       top: 50%;
-      transform: translateY(-50%);
-      text-align: center;
+      left: calc(50% - 240px);
     }
 
     #fuse-splash-screen .logo {
-      width: 92px;
       margin: 0 auto;
-      animation: zoom 8s linear infinite alternate;
+      animation: appear 4s ease-in-out infinite alternate;
     }
 
     #fuse-splash-screen .logo img {
       filter: drop-shadow(0px 10px 6px rgba(0, 0, 0, 0.2))
     }
 
+
+    #watermark {
+      --logo-size: 1024px;
+      position: fixed;
+      width: var(--logo-size);
+      height: var(--logo-size);
+      right: calc(var(--logo-size) / -2);
+      bottom: calc(var(--logo-size) / -2);
+      opacity: 0.05 !important;
+      animation: appear 4s ease-in-out forwards;
+    }
+
     @keyframes appear {
       0% {
         opacity: 0;
+        filter: blur(50px);
       }
       100% {
         opacity: 1;
+        filter: blur(0);
       }
     }
-
-    @keyframes zoom {
-      0% {
-        opacity: 0;
-        transform: scale(0.01);
-      }
-      100% {
-        opacity: 0.85;
-        transform: scale(4);
-      }
-    }
-
-    @keyframes heartbeat {
-      0% {
-        transform: scale(1);
-      }
-      25% {
-        transform: scale(1.1);
-      }
-      40% {
-        transform: scale(1);
-      }
-      60% {
-        transform: scale(1.1);
-      }
-      80% {
-        transform: scale(1);
-      }
-    }
-
   </style>
   <!-- / FUSE Splash Screen CSS -->
 </head>
@@ -114,9 +95,12 @@
 <body>
 
 <fuse-splash-screen id="fuse-splash-screen">
+  <div id="watermark">
+    <img src="assets/images/logos/signum-node-white.svg" alt="Signum Logo Node">
+  </div>
   <div class="center">
     <div class="logo">
-      <img width="128" src="assets/images/logos/phoenix_v.svg">
+      <img width="480" src="assets/images/logos/logo_white.svg">
     </div>
   </div>
 </fuse-splash-screen>
@@ -124,5 +108,4 @@
 <app></app>
 
 </body>
-
 </html>
