--- a/web/angular-wallet/src/index.html
+++ b/web/angular-wallet/src/index.html
@@ -53,7 +53,7 @@
       display: block;
       width: 100%;
       position: absolute;
-      top: 50%;
+      top: 40%;
       left: calc(50% - 240px);
     }
 
@@ -67,7 +67,7 @@
     }
 
 
-    #watermark {
+    #splash-watermark {
       --logo-size: 1024px;
       position: fixed;
       width: var(--logo-size);
@@ -95,7 +95,7 @@
 <body>
 
 <fuse-splash-screen id="fuse-splash-screen">
-  <div id="watermark">
+  <div id="splash-watermark">
     <img src="assets/images/logos/signum-node-white.svg" alt="Signum Logo Node">
   </div>
   <div class="center">
