feat: added local font assets and set up styles

--- a/web/angular-wallet/src/index.html
+++ b/web/angular-wallet/src/index.html
@@ -15,7 +15,7 @@
 
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="assets/icons/material-icons/outline/style.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600,700" rel="stylesheet">
+  <link href="assets/fonts/fonts.css" rel="stylesheet">
 
   <link rel="apple-touch-icon" sizes="57x57" href="assets/images/logos/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="assets/images/logos/apple-icon-60x60.png">
