--- a/web/angular-wallet/src/index.html
+++ b/web/angular-wallet/src/index.html
@@ -51,9 +51,8 @@
 
     #fuse-splash-screen .center {
       display: block;
-      width: 100%;
       position: absolute;
-      top: 40%;
+      top: 30%;
       left: calc(50% - 240px);
     }
 
@@ -63,8 +62,22 @@
     }
 
     #fuse-splash-screen .logo img {
+      width: 480px;
       filter: drop-shadow(0px 10px 6px rgba(0, 0, 0, 0.2))
     }
+
+    @media screen and (max-width: 480px) {
+      #fuse-splash-screen .logo img {
+        width: 320px;
+        filter: drop-shadow(0px 10px 6px rgba(0, 0, 0, 0.2))
+      }
+
+      #fuse-splash-screen .center {
+        left: calc(50% - 160px);
+      }
+    }
+
+
 
 
     #splash-watermark {
@@ -100,7 +113,7 @@
   </div>
   <div class="center">
     <div class="logo">
-      <img width="480" src="assets/images/logos/logo_white.svg">
+      <img src="assets/images/logos/logo_white.svg">
     </div>
   </div>
 </fuse-splash-screen>
