--- a/web/angular-wallet/src/index.html
+++ b/web/angular-wallet/src/index.html
@@ -53,7 +53,7 @@
       display: block;
       position: absolute;
       top: 30%;
-      left: calc(50% - 240px);
+      left: calc(50% - 160px);
     }
 
     #fuse-splash-screen .logo {
@@ -62,20 +62,20 @@
     }
 
     #fuse-splash-screen .logo img {
-      width: 480px;
+      width: 320px;
       filter: drop-shadow(0px 10px 6px rgba(0, 0, 0, 0.2))
     }
 
-    @media screen and (max-width: 480px) {
-      #fuse-splash-screen .logo img {
-        width: 320px;
-        filter: drop-shadow(0px 10px 6px rgba(0, 0, 0, 0.2))
-      }
+    /*@media screen and (max-width: 480px) {*/
+    /*  #fuse-splash-screen .logo img {*/
+    /*    width: 320px;*/
+    /*    filter: drop-shadow(0px 10px 6px rgba(0, 0, 0, 0.2))*/
+    /*  }*/
 
-      #fuse-splash-screen .center {
-        left: calc(50% - 160px);
-      }
-    }
+    /*  #fuse-splash-screen .center {*/
+    /*    left: calc(50% - 160px);*/
+    /*  }*/
+    /*}*/
 
     #splash-watermark {
       --logo-size: 1024px;
